# OCR

ocr-project/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ocr-project/alembic/: env.py
ocr-project/app/api/endpoints/: files.py  tasks.py
ocr-project/app/constant/: constant.py
ocr-project/app/core/: config.py
ocr-project/app/db/: session.py
ocr-project/app/helper/file/: file_helper.py
ocr-project/app/helper/minio/: minio.py
ocr-project/app/models/: file.py  page_ocr_result.py  page_result.py  task.py  type.py
ocr-project/app/repository/: file_repository.py
ocr-project/app/schema/: files.py  task.py
ocr-project/app/services/: file_service.py  task.py
ocr-project/app/services/ai/: flax_service.py
ocr-project/app/services/minio/: minio_service.py
ocr-project/app/storage/: file_storage.py  result_storage.py
ocr-project/app/worker/: file_process_worker.py
ocr-project/test/: test_upload.py
